[package]
name = "isx"
version = "0.1.0"
edition = "2021"
description = "Traits for checking certain conditions of values"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "MIT"
repository = "https://github.com/ctron/is-x"
categories = ["data-structures"]
keywords = ["traits"]

[dependencies]
