[package]
name = "isx-macros"
version = "0.1.1"
edition = "2024"
description = "Macros for implementing traits for checking certain conditions of values"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "MIT"
repository = "https://github.com/ctron/is-x"
categories = ["data-structures"]
keywords = ["traits"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }

[package.metadata.release]
tag = false
tag-name = "v{{version}}"
