[package]
name = "isx"
description = "Traits for checking certain conditions of values"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
repository = "https://github.com/ctron/is-x"
categories = ["data-structures"]
keywords = ["traits"]
readme = "../README.md"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
isx-macros = { path = "../isx-macros", version = "0.1.2" }
