[package]
name = "isx"
description = "Traits for checking certain conditions of values"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
repository = "https://github.com/ctron/is-x"
categories = ["data-structures"]
keywords = ["traits"]
readme = "../README.md"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
isx-macros = { path = "../isx-macros", version = "0.1.5" }

bytes = { version = "1", optional = true, default-features = false }
serde_json = { version = "1", optional = true, default-features = false, features = ["alloc"] } # serde_json requires alloc

[features]
default = ["std"]
std = ["alloc"]
alloc = []
